--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,14 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug",
-            "program": "${workspaceFolder}/<executable file>",
-            "args": [],
-            "cwd": "${workspaceFolder}"
+            "name": "Debug Rust",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--manifest-path",
+                    "${fileDirname}/../Cargo.toml"
+                ]
+            }
         }
     ]
 }
