--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,14 +7,42 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug Rust",
+            "name": "Debug executable",
             "cargo": {
                 "args": [
                     "build",
-                    "--manifest-path",
-                    "${fileDirname}/../Cargo.toml"
-                ]
-            }
+                    "--bin=rust-webserver",
+                    "--package=rust-webserver"
+                ],
+                "filter": {
+                    "name": "rust-webserver",
+                    "kind": "bin"
+                }
+            },
+            "args": [
+                // "user_arg1",
+                // "user_arg2"
+            ],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=rust-webserver",
+                    "--package=rust-webserver"
+                ],
+                "filter": {
+                    "name": "rust-webserver",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
         }
     ]
 }
